--- a/passion project/Views/Brands/Details.cshtml
+++ b/passion project/Views/Brands/Details.cshtml
@@ -21,7 +21,7 @@
                 <td>@Html.DisplayFor(model => model.name)</td>
             </tr>
             <tr>
-                <td>Date and Time of registration:</td>
+                <td>@Html.DisplayNameFor(model => model.createdDate):</td>
                 <td>@Html.DisplayFor(model => model.createdDate)</td>
             </tr>
         </tbody>
