--- a/passion project/Views/Brands/Create.cshtml
+++ b/passion project/Views/Brands/Create.cshtml
@@ -34,5 +34,5 @@ ViewBag.Title = "Create new brand";
 }
 
 <div>
-    @Html.ActionLink("Back to The List of Brands", "List")
+    @Html.ActionLink("Back to The List of Brands", "List", null, new { @class = "btn btn-default" })
 </div>
