--- a/passion project/Views/Stocks/DeleteConfirm.cshtml
+++ b/passion project/Views/Stocks/DeleteConfirm.cshtml
@@ -1,4 +1,5 @@
 ﻿@model passion_project.Models.Stock
+@Styles.Render("~/Content/Stocks/Delete.css")
 
 @{
     ViewBag.Title = "DeleteConfirm";
@@ -6,7 +7,7 @@
 @Html.ActionLink("Back", "Details", new { id = Model.stockId })
 <h2>Confirm your action</h2>
 
-<h3>Are you sure you want to delete the stock with size   @Html.DisplayFor(model => model.size)?</h3>
+<p id="deleteMsg">Are you sure you want to delete the stock with size   @Html.DisplayFor(model => model.size)?</p>
 <div>
 
 
@@ -19,7 +20,7 @@
         @Html.HiddenFor(model => model.itemId)
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" />
+            <input type="submit" value="Delete" class="btn btn-danger" />
 
         </div>
     }
