--- a/passion project/Views/Brands/List.cshtml
+++ b/passion project/Views/Brands/List.cshtml
@@ -22,13 +22,12 @@
     {
         <tr>
             <td>
-                @Html.DisplayFor(modeltem => item.name)
+                @Html.ActionLink(""+@Html.DisplayFor(modeltem => item.name), "Details", new { id = item.brandId }) 
             </td>
             <td>
 
-                @Html.ActionLink("Edit", "Edit", new { id = item.brandId }) |
-                @Html.ActionLink("Details", "Details", new { id = item.brandId }) |
-                @Html.ActionLink("Delete", "DeleteConfirm", new { id = item.brandId })
+                @Html.ActionLink("Edit", "Edit", new { id = item.brandId }, new { @class = "btn btn-info" }) |               
+                @Html.ActionLink("Delete", "DeleteConfirm", new { id = item.brandId }, new { @class = "btn btn-danger" })
             </td>
         </tr>
     }
