--- a/passion project/Views/Items/DeleteConfirm.cshtml
+++ b/passion project/Views/Items/DeleteConfirm.cshtml
@@ -1,18 +1,19 @@
 ﻿@model passion_project.Models.Item
+@Styles.Render("~/Content/Items/Delete.css")
 
 @{
     ViewBag.Title = "DeleteConfirm";
 }
-
+@Html.ActionLink("Back to The List of Items", "List", null, new { id = "back-link" })
 <h2>Confirm your action</h2>
 
-@Html.ActionLink("Back to The List of Items", "List")
 
-<h3>Are you sure you want to delete this item?</h3>
+
+<p id="deleteMsg">Are you sure you want to delete this item?</p>
 <div>
 
-    <div>
-        <img src="~/Content/Items/@Model.image" alt="item image" width="300" height="300" />
+    <div class="div-img">
+        <img src="~/Content/Images/@Model.image" alt="item image" class="img-rounded"/>
 
     </div>
 
@@ -22,7 +23,7 @@
         @Html.HiddenFor(model => model.itemId, new { Name = "id" })
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" />
+            <input type="submit" value="Delete" class="btn btn-danger" />
 
         </div>
     }
