--- a/passion project/Views/Items/List.cshtml
+++ b/passion project/Views/Items/List.cshtml
@@ -1,14 +1,53 @@
 ﻿@model IEnumerable<passion_project.Models.Item>
+@Styles.Render("~/Content/Items/List.css")
 
 @{
-    ViewBag.Title = "List";
+    ViewBag.Title = "List of items";
+    int itemPerRow = ViewBag.itemPerRow;
+    int nberOfRows = ViewBag.nberOfRows;
 }
 
-<h2>List</h2>
+<h2>List of Items</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
+
+<div class="container">
+    @for (var i = 0; i < nberOfRows; i++)
+    {
+        <div class="row">
+
+            @for (var j = 0; j < itemPerRow; j++)
+            {
+                <div class="col-sm-3">
+
+                    @if ((i * itemPerRow) + j < Model.Count())
+                    {
+                        var item = Model.ElementAt((i * itemPerRow) + j);
+                        <div class="div-item-img">
+                            <a href="Details/@item.itemId">
+                                <img src="~/Content/Images/@item.image" alt="item image" class="img-responsive" />
+                            </a>
+                        </div>
+                        <div class="div-item-brand"><strong>@Html.DisplayFor(modelItem => item.brand.name)</strong></div>
+                        if (!string.IsNullOrEmpty(item.name))
+                        {
+                            <div class="div-item-name">@Html.DisplayFor(modelItem => item.name)</div>
+                        }
+                        <div class="div-item-price"><strong>Cad @Html.DisplayFor(modelItem => item.price)</strong> </div>
+                    }
+
+                </div>
+
+
+            }
+
+        </div>
+
+    }
+</div>
+<!--
 <table class="table">
     <tr>
 
@@ -29,27 +68,29 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            <img src="~/Content/Items/@item.image" alt="item image" width="250" height="300" />
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.brand.name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.gender)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.price)
-        </td>
-        
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.itemId }) |
-            @Html.ActionLink("Details", "Details", new { id=item.itemId }) |
-            @Html.ActionLink("Delete", "DeleteConfirm", new { id=item.itemId })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                <img src="~/Content/Items/@item.image" alt="item image" width="250" height="300" />
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.brand.name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.gender)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.price)
+            </td>
+
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.itemId }) |
+                @Html.ActionLink("Details", "Details", new { id = item.itemId }) |
+                @Html.ActionLink("Delete", "DeleteConfirm", new { id = item.itemId })
+            </td>
+        </tr>
+    }
 
 </table>
+    -->
