--- a/passion project/Views/Stocks/Edit.cshtml
+++ b/passion project/Views/Stocks/Edit.cshtml
@@ -1,4 +1,5 @@
 ﻿@model passion_project.Models.Stock
+@Styles.Render("~/Content/Stocks/Edit.css")
 
 @{
     ViewBag.Title = "Edit";
@@ -14,42 +15,42 @@
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-   
 
-<div class="form-horizontal">
-    <h4>Stock</h4>
-    <hr />
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    @Html.HiddenFor(model => model.stockId)
-    @Html.HiddenFor(model => model.itemId, new { Name = "itemId" })
-    @Html.HiddenFor(model => model.createdDate, new { Name = "createdDate" })
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.size, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(model => model.size, new { @class = "form-control", @readonly="readonly" })
-            @Html.ValidationMessageFor(model => model.size, "", new { @class = "text-danger" })
+    <div class="form-horizontal">
+        <h3>Stock</h3>
+        <hr />
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.stockId)
+        @Html.HiddenFor(model => model.itemId, new { Name = "itemId" })
+        @Html.HiddenFor(model => model.createdDate, new { Name = "createdDate" })
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.size, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.TextBoxFor(model => model.size, new { @class = "form-control", @readonly = "readonly" })
+                @Html.ValidationMessageFor(model => model.size, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.quantity, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.quantity, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.quantity, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+
+
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Update" class="btn btn-warning" />
+            </div>
         </div>
     </div>
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.quantity, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.quantity, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.quantity, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    
-
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Update" class="btn btn-default" />
-        </div>
-    </div>
-</div>
 }
 
 <div>
-    @Html.ActionLink("Back", "Details","Stocks",new { id = Model.stockId },null)
+    @Html.ActionLink("Back", "Details", "Stocks", new { id = Model.stockId },null)
 </div>
