--- a/passion project/Views/Brands/Create.cshtml
+++ b/passion project/Views/Brands/Create.cshtml
@@ -27,7 +27,7 @@ ViewBag.Title = "Create new brand";
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Create" class="btn btn-default" />
+            <input type="submit" value="Create" class="btn btn-success" />
         </div>
     </div>
 </div>
