--- a/passion project/Views/Stocks/Create.cshtml
+++ b/passion project/Views/Stocks/Create.cshtml
@@ -1,27 +1,30 @@
 ﻿@model passion_project.Models.Stock
+@Styles.Render("~/Content/Stocks/Create.css")
 
 @{
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
 
-@using (Html.BeginForm( "Create","Stocks",FormMethod.Post))
+
+@using (Html.BeginForm("Create", "Stocks", FormMethod.Post))
 {
+    <h2>Create stock</h2>
     @Html.AntiForgeryToken()
     @Html.HiddenFor(model => model.itemId)
 
     <div class="form-horizontal">
-        <h4>Stock</h4>
+
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.size, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.size, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.size, "", new { @class = "text-danger" })
-            </div>
+    <div class="form-group">        
+        @Html.LabelFor(model => model.size, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10 input-group">
+            <span class="input-group-addon">US</span>
+            @Html.EditorFor(model => model.size, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.size, "", new { @class = "text-danger" })
         </div>
+    </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.quantity, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -30,16 +33,16 @@
                 @Html.ValidationMessageFor(model => model.quantity, "", new { @class = "text-danger" })
             </div>
         </div>
-       
+
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Create" class="btn btn-success" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("back to the item", "Details","Items", new { id=Model.itemId},null) 
+    @Html.ActionLink("back to the item", "Details", "Items", new { id = Model.itemId }, null)
 </div>
