--- a/passion project/Views/Stocks/Edit.cshtml
+++ b/passion project/Views/Stocks/Edit.cshtml
@@ -27,7 +27,8 @@
 
         <div class="form-group">
             @Html.LabelFor(model => model.size, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            <div class="col-md-10 input-group">
+                <span class="input-group-addon">US</span>
                 @Html.TextBoxFor(model => model.size, new { @class = "form-control", @readonly = "readonly" })
                 @Html.ValidationMessageFor(model => model.size, "", new { @class = "text-danger" })
             </div>
