--- a/passion project/Views/Items/List.cshtml
+++ b/passion project/Views/Items/List.cshtml
@@ -5,6 +5,7 @@
     ViewBag.Title = "List of items";
     int itemPerRow = ViewBag.itemPerRow;
     int nberOfRows = ViewBag.nberOfRows;
+    int col = 12 / itemPerRow;
 }
 
 <h2>List of Items</h2>
@@ -20,7 +21,7 @@
 
             @for (var j = 0; j < itemPerRow; j++)
             {
-                <div class="col-sm-3">
+                <div class="col-sm-@col">
 
                     @if ((i * itemPerRow) + j < Model.Count())
                     {
@@ -46,51 +47,34 @@
         </div>
 
     }
+    <div class="page-paginate">
+        @{ 
+            int PageNum = Convert.ToInt32(ViewData["PageNum"]);
+            int MaxPageNum = Convert.ToInt32(ViewData["MaxPageNum"]);
+        }
+        <ul>
+
+            @if (PageNum > 1)
+            {
+                int PrevPage = PageNum - 1;
+                <li>
+
+                    @Html.ActionLink("Prev", "List", new { pageNum = PrevPage, brandId = ViewBag.brandId, gender = ViewBag.gender })
+                </li>
+                <li>|</li>
+
+            }
+            <li>@ViewData["PageNum"] of @ViewData["MaxPageNum"]</li>
+
+            @if (PageNum < MaxPageNum)
+            {
+                <li>|</li>
+                int NextPage = PageNum + 1;
+                <li>
+                    @Html.ActionLink("Next", "List", new { pageNum = NextPage, brandId = ViewBag.brandId, gender = ViewBag.gender })
+                </li>
+            }
+
+        </ul>
+    </div>
 </div>
-<!--
-<table class="table">
-    <tr>
-
-        <th>
-            @Html.DisplayNameFor(model => model.image)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.brand.name)
-        </th>
-
-        <th>
-            @Html.DisplayNameFor(model => model.gender)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.price)
-        </th>
-
-        <th></th>
-    </tr>
-
-    @foreach (var item in Model)
-    {
-        <tr>
-            <td>
-                <img src="~/Content/Items/@item.image" alt="item image" width="250" height="300" />
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.brand.name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.gender)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.price)
-            </td>
-
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.itemId }) |
-                @Html.ActionLink("Details", "Details", new { id = item.itemId }) |
-                @Html.ActionLink("Delete", "DeleteConfirm", new { id = item.itemId })
-            </td>
-        </tr>
-    }
-
-</table>
-    -->
