--- a/passion project/Views/Shared/_Layout.cshtml
+++ b/passion project/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -17,13 +18,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Sneakers World Shop", "List", "Items", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Sneakers World Shop", "List", "Items", new { area = "", pageNum = 1 }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Men", "List", "Items")</li>
-                    <li>@Html.ActionLink("Women", "List", "Items")</li>
-                    <li>@Html.ActionLink("Brands", "List", "Brands")</li> 
+                    <li>@Html.ActionLink("Men", "List", "Items", new { gender = 0 , pageNum = 1}, null)</li>
+                    <li>@Html.ActionLink("Women", "List", "Items", new { gender = 1 , pageNum = 1}, null)</li>
+                    <li>@Html.ActionLink("Brands", "List", "Brands")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
