--- a/passion project/Views/Brands/DeleteConfirm.cshtml
+++ b/passion project/Views/Brands/DeleteConfirm.cshtml
@@ -17,7 +17,7 @@
         @Html.HiddenFor(model => model.brandId, new { Name = "id" })
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" />
+            <input type="submit" value="Delete" class="btn btn-danger" />
 
         </div>
     }
